--- a/sass/curriculum.scss
+++ b/sass/curriculum.scss
@@ -6,12 +6,23 @@
 }
 
 .curriculum-selector {
-  width:250px;
+  /*width:250px;
   border-radius:5px;
   border:solid 1px #cccccc;
   color:#666666;
   position:absolute;
   top:250px;
+  right:-100%;
+  padding:15px;
+  box-sizing: border-box;
+  background-color:#fff;
+  transition:all 0.3s ease-in-out;*/
+  width:250px;
+  border-radius:5px;
+  border:solid 1px #cccccc;
+  color:#666666;
+  position:absolute;
+  top:180px;
   right:-100%;
   padding:15px;
   box-sizing: border-box;
@@ -22,17 +33,29 @@
     display:block;
     width:100%;
     text-align: center;
-    font-weight:500;
+    font-weight:600;
   }
 
   select {
-    width:100%;
+    /*width:100%;
     height:35px;
     line-height: 35px;
     padding:0 7px;
     box-sizing: border-box;
     margin:15px 0;
     border-color:#000;
+    border-radius:3px;
+    color:#000;
+    background-color:#fff;
+    font-family: $mainFont;
+    font-size:16px;*/
+    width:100%;
+    height:35px;
+    line-height: 35px;
+    padding:0 7px;
+    box-sizing: border-box;
+    margin:15px 0;
+    border-color:#aeaeae;
     border-radius:3px;
     color:#000;
     background-color:#fff;
@@ -45,20 +68,26 @@
   }
 
   &.completed{
-    right:calc(100% - 250px);
-    top:0;
+    /*right:calc(100% - 250px);
+    top:0;*/
+    right:calc(50% + 135px);
+    top:20px;
+    background-color: #f5f5f5;
 
     &.select-program{
-      right:calc(100% - 510px);
+      /*right:calc(100% - 510px);*/
+      right:calc(50% - 125px);
     }
 
     &.select-start{
-      right:calc(100% - 770px);
+      /*right:calc(100% - 770px);*/
+      right:calc(50% - 385px);
     }
   }
 
   &.active{
-    right: calc(50% - (250px - 10%));
+    /*right: calc(50% - (250px - 10%));*/
+    right: calc(50% - 125px);
   }
 }
 
