--- a/sass/helpers.scss
+++ b/sass/helpers.scss
@@ -228,6 +228,7 @@
     border-radius:3px;
     box-sizing: border-box;
     min-width:200px;
+	max-width:200px;
     background-color:#fff;
     font-family: 'Open Sans', arial, sans-serif;
     font-size:14px;
