--- a/sass/campus.scss
+++ b/sass/campus.scss
@@ -36,6 +36,10 @@
         transition: all 0.3s ease;
         display:block;
       }
+      .add-campus-btn{       
+        opacity:0;
+        visibility: hidden;        
+      }
 
       .campus-buildings {
         opacity: 0;
@@ -45,6 +49,7 @@
 
         .buildings-row{
           height:50px;
+          padding: 0 30px 0 0;
         }
       }
 
@@ -66,6 +71,13 @@
           opacity:0;
           visibility: hidden;
           animation: all 0.5s ease 0.5s;
+        }
+        .add-campus-btn{
+          margin:60px auto;
+          transition: all 0.3s ease;
+          display:block;
+          visibility: visible;
+          opacity: 1;
         }
 
         .close-edit {
