--- a/sass/course.scss
+++ b/sass/course.scss
@@ -1,3 +1,73 @@
 .btn-pad {
   margin-left: 10px;
 }
+
+.select-subject{
+    width: 48%;
+    display: inline-block;
+    border-radius: 5px;
+    box-sizing: border-box;
+    border: solid 1px #22305d;
+    margin-bottom: 15px;
+    height:auto;
+    max-height:95%;
+    margin-left: 20px;
+
+  .select-header{
+    width: 100%;
+    padding: 15px;
+    box-sizing: border-box;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background-color: #22305d;
+    font-size: 16px;
+    color: #fff;
+  }
+
+  .btn {
+    padding:5px;
+    margin: 0 5px;
+  }
+
+  select {
+    width:100%;
+    font-size: 16px;
+    font-family: "Open Sans", arial, sans-serif;
+  }
+}
+
+.selected-subject{
+    width: 48%;
+    display: inline-block;
+    border-radius: 5px;
+    box-sizing: border-box;
+    border: solid 1px #22305d;
+    margin-bottom: 15px;
+    height:auto;
+    max-height:95%;
+    margin-left: 20px;
+
+  .course-header{
+    width: 100%;
+    padding: 15px;
+    box-sizing: border-box;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background-color: #22305d;
+    font-size: 16px;
+    color: #fff;
+  }
+
+  .btn {
+    padding:5px;
+    margin: 0 5px;
+  }
+
+  select {
+    width:100%;
+    font-size: 16px;
+    font-family: "Open Sans", arial, sans-serif;
+  }
+
+}
+
