update faculty search

--- a/sass/faculty.scss
+++ b/sass/faculty.scss
@@ -2,19 +2,64 @@ div.alpha-search{
   color:blue;
   text-align:center;
 }
-.result-faculty ul li{
-  width:80%;
-  padding:15px 10px;
-  box-sizing:border-box;
-  border-bottom:solid 1px #cccccc;
-  display:block;
-  margin:0 auto;
+.result-faculty {
+  padding:75px 0;
 
-  &:last-child{
-    border-bottom:none;
-  }
+  ul li{
+    width:80%;
+    padding:15px 10px;
+    box-sizing:border-box;
+    border-bottom:solid 1px #cccccc;
+    display:block;
+    margin:0 auto;
 
-  &:nth-child(even){
-    background-color:#eaeaea;
-  }
+      &:last-child{
+        border-bottom:none;
+      }
+
+      &:nth-child(even){
+        background-color:#eaeaea;
+      }
+  }  
+}
+
+#find {
+    background-color: #8DABA7;
+    height: 25px;
+    margin-top: 10px;
+    float: left;
+    padding: 10px;
+    width: calc(100% - 20px);
+
+    #search-input {
+      width: 150px;
+      float: left;
+      margin-right: 20px;
+    }
+
+    #search-icon {
+      background-image: url("/images/search.png");
+      background-repeat: no-repeat;
+      height: 22px;
+      width: 27px;
+      float: left;
+      background-position: 0px -44px;
+      cursor: pointer;
+    }
+
+    li{
+      float: left;
+      padding: 0px 12px 0px 10px;
+      cursor: pointer;
+    }
+    ul {
+      list-style: outside none none;
+      float: left;
+      margin: 0px;
+    }
+    li a {
+      text-decoration: none;
+      position: relative;
+      right: 10px;
+    }
 }
