add home page, edit and delete for faculty

--- a/sass/helpers.scss
+++ b/sass/helpers.scss
@@ -349,3 +349,8 @@ div.loading {
     color:darken($primaryColor,10%);
   }
 }
+.date {
+  margin-top:-60px;
+  color:#fff;
+  margin-right:20px;
+}
