work on classrooms

--- a/sass/faculty.scss
+++ b/sass/faculty.scss
@@ -25,6 +25,11 @@ div.alpha-search{
   }  
 }
 
+.edit-faculty-container {
+    width: 600px;
+    margin: 50px auto;
+}
+
 #find {
     background-color: $primaryColor;
     height: 25px;
