--- a/sass/login.scss
+++ b/sass/login.scss
@@ -86,10 +86,11 @@
 
 }
   .requirements {
+        line-height: 12px;
         padding: 0 15px 0 25px;
         color: #999;
         max-height: 0;
-        transition: 0.28s;
+        transition: 0.2s;
         overflow: hidden;
         color: red;
         font-style: italic;
