--- a/sass/curriculum.scss
+++ b/sass/curriculum.scss
@@ -2,7 +2,8 @@
   position:relative;
   display:block;
   width:100%auto;
-  height:100%
+  height:100%;
+  overflow-x:hidden;
 }
 
 .curriculum-selector {
