--- a/sass/helpers.scss
+++ b/sass/helpers.scss
@@ -12,23 +12,23 @@
   display:none;
 }
 .alert-box{
-  width:600px;
+  width:450px;
   border:solid 1px #cccccc;
   border-radius:5px;
   box-sizing: border-box;
   margin:0 auto;
-  height:77px;
+  height:102px;
   position:relative;
   margin-bottom:25px;
 
   .alert-icon{
     float:left;
-    height:75px;
+    height:100px;
     width:15%;
     background-color:#cccccc;
     box-sizing: border-box;
     overflow: hidden;
-    line-height: 75px;
+    line-height: 100px;
     text-align: center;
     color:#fff;
     font-size:22px;
@@ -84,7 +84,7 @@
 
 .modal-container{
   width:600px;
-  height:500px;
+  height:375px;
   border:solid 1px $primaryColor;
   border-radius:5px;
   overflow: hidden;
@@ -110,17 +110,18 @@
 
   .modal-header{
     width:100%;
-    height:35px;
+    height:60px;
     line-height:35px;
     background-color:$secondaryColor;
     color:#fff;
-    padding:0 10px;
+    padding:10px;
     box-sizing: border-box;
+    font-size: 24px;
+    font-weight: 700;
   }
   .modal-body{
-    padding:10px;
-    width:100%auto;
-    height:400px;
+    padding:50px 0;
+    height:250px;
     overflow-y: auto;
     box-sizing: border-box;
     font-size:14px;
@@ -130,7 +131,7 @@
     width:100%;
     height:65px;
     background-color:#e2e2e2;
-    padding:0 10px;
+    padding:15px;
     box-sizing: border-box;
   }
 }
