--- a/sass/myschedule.scss
+++ b/sass/myschedule.scss
@@ -1,6 +1,6 @@
-.result-myschedule ul li{
+.result-myschedule tr{
   width:100%;
-  padding:15px 10px;
+  padding:10px 5px;
   box-sizing:border-box;
   border-bottom:solid 1px #cccccc;
   display:block;
@@ -12,4 +12,10 @@
   &:nth-child(even){
     background-color:#eaeaea;
   }
+}
+th,td{
+  margin: 0;
+  text-align: center;
+  border-collapse: collapse;
+  min-width: 150px;
 }
